--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid">
   <div class="jumbotron text-center">
     <h1>
-      <img class="logo" src="assets/ngx-rocket-logo.png" alt="angular logo" />
-      <span translate>Hello world !</span>
+      <span translate>People Yield Test</span>
     </h1>
+    <img class="logo" src="assets/Logo_2020.png" alt="angular logo" />
+    <hr />
     <app-loader [isLoading]="isLoading"></app-loader>
-    <q [hidden]="isLoading">{{ quote }}</q>
   </div>
 </div>
